2005-10-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_automate_keys.at: Portability fixes.

2005-10-08  Benoît Dejean  <benoit@placenet.org>

	* commands.cc: One more i18n string.

2005-10-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_automate_keys.at: Don't rely on extended sed either!

2005-10-08  Nathaniel Smith  <njs@pobox.com>

	* database.{hh,cc}: Clean-up previous change -- switch to using a
	cleanup_ptr to hold sqlite3_stmt handles, for proper exception
	safety.

2005-10-08  Nathaniel Smith  <njs@pobox.com>

	* database.cc (fetch): Do not insert prepared statements into the
	statement table until they are successfully created, to avoid
	segfaults on database teardown.

2005-10-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_automate_keys.at: Use sed rather than relying on an
	extended grep being available.

2005-10-08  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (send_change_for): Handle branch-less
	revisions.

2005-10-08  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Make initial_rel_path an fs::path.  Adjust code
	correspondingly.  Add tests that calling monotone from inside MT
	should work.
	* tests/t_add_inside_MT.at, testsuite.at: New test.

2005-10-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/fs.cc: Don't consider USERPROFILE as a possible home
	directory; APPDATA is more appropriate.  Add a second method to
	get the APPDATA path.  Always use HOME if it's set (not just under
	Cygwin/MinGW).
	* tests/t_netsync_absorbs.at: Add missing CANONICALISE().

2005-10-07  Timothy Brownawell  <tbrownaw@gmail.com>

	* commands.cc (pubkey): don't insist on having a database
	* tests/t_key_management_without_db.at: check it

2005-10-07  Timothy Brownawell  <tbrownaw@gmail.com>

	* file_io.cc, vocab.cc, Makefile.am: fix merge
	* botan/algolist.cpp, botan/def_alg.cpp: fix merge

2005-10-07  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc: add "automate keys". like "ls keys", except it