@@ -1,3 +1,8 @@
+2005-10-10  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	* contrib/get_stdio.pl: Add comments. I'm told it was "obtuse",
+	hopefully this will help somewhat.
+
 2005-10-08  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* tests/t_automate_keys.at: Portability fixes.
